# ui

./: .editorconfig  LICENSE  Makefile
.NET/: .NET.sln  .gitignore  Makefile
.NET/Example/: App.xaml  App.xaml.cs  Example.csproj  Flags.g.cs  View.g.cs
.NET/Example (Package)/: Example (Package).wapproj  Package.appxmanifest
.NET/Hui/: Hui.fs  Hui.fsproj  Window.fs
.github/workflows/: main.yaml
Haskell/: .gitignore  .hlint.yaml  .stylish-haskell.yaml  Hui.def  Makefile  cabal.project  hie.yaml  hui.cabal
Haskell/example/: HuiLib.def  Logic.def  Setup.hs  example.cabal
Haskell/example/protobuf/: flags.proto  protobuf.proto  view.proto
Haskell/example/src/: Example.hs
Haskell/example/src/Example/: Data.hs  Flags.hs  Message.hs  View.hs
Haskell/example/test/: ExampleSpec.hs
Haskell/hui/: hui.cabal
Haskell/hui-build/: hui-build.cabal
Haskell/hui-build/app/: hui.hs
Haskell/hui-build/src/Hui/: Build.hs
Haskell/hui/src/: Hui.hs
Haskell/hui/src/Hui/: Code.hs
Haskell/src/: Hui.hs  rts.c
UI/: UI.sln
UI/Lib/: Lib.fsproj  Library1.fs  Script.fsx
UI/UI/: App.xaml  App.xaml.cs  MainWindow.xaml.cs  UI.csproj
UI/UI (Package)/: UI (Package).wapproj
UI/UI/UI/: MainWindow.xaml
UI/UI/UI (Package)/: Package.appxmanifest
