cabal-version: 2.2

name: hui
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
author: Kazuki Okamoto
maintainer: kazuki.okamoto@kakkun61.com
-- copyright:
-- category:
build-type: Simple
-- extra-source-files:

common common
  build-depends: base >=4 && <5
  default-language: Haskell2010
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -Wno-name-shadowing

library
  import: common
  exposed-modules: Hui
  hs-source-dirs: src
  ghc-options: -c
