cabal-version: 2.2

name: example
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
author: Kazuki Okamoto
maintainer: kazuki.okamoto@kakkun61.com
-- copyright:
-- category:
build-type: Custom
extra-source-files: protobuf/*.proto

custom-setup
  setup-depends: base,
                 Cabal,
                 directory,
                 filepath,
                 process

common common
  build-depends: base >=4 && <5
  default-language: Haskell2010
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -Wno-name-shadowing
  default-extensions: Strict

common lib
  import: common
  hs-source-dirs: src,
                  gen
  build-depends: hui,
                 bytestring,
                 containers,
                 either-result,
                 protocol-buffers,
                 protocol-buffers-descriptor,
                 text
  autogen-modules: Example.Protobuf
                   Example.Protobuf.Component
                   Example.Protobuf.Component.Component
                   Example.Protobuf.Component.Button
                   Example.Protobuf.Component.View
                   Example.Protobuf.Flags
                   Example.Protobuf.Message
                   Example.Protobuf.Message.ButtonClicked
                   Example.Protobuf.Message.Message
  build-tool-depends: hprotoc:hprotoc

library
  import: lib
  exposed-modules: Example
                   Example.Data
                   Example.Protobuf
                   Example.Protobuf.Component
                   Example.Protobuf.Component.Component
                   Example.Protobuf.Component.Button
                   Example.Protobuf.Component.View
                   Example.Protobuf.Flags
                   Example.Protobuf.Message
                   Example.Protobuf.Message.ButtonClicked
                   Example.Protobuf.Message.Message

foreign-library Logic
  import: lib
  other-modules: Example
                 Example.Data
                 Example.Protobuf
                 Example.Protobuf.Component
                 Example.Protobuf.Component.Component
                 Example.Protobuf.Component.Button
                 Example.Protobuf.Component.View
                 Example.Protobuf.Flags
                 Example.Protobuf.Message
                 Example.Protobuf.Message.ButtonClicked
                 Example.Protobuf.Message.Message
  type: native-shared
  cpp-options: -DFOREIGN
  if os(Windows)
    options: standalone
    mod-def-file: Logic.def

test-suite spec
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules: ExampleSpec
  build-depends: example,
                 hui,
                 hspec,
                 bytestring,
                 mtl
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
               -Wno-missing-export-lists
               -Wno-missing-import-lists
  build-tool-depends: hspec-discover:hspec-discover

-- for IDE
executable setup
  import: common
  hs-source-dirs: .
  main-is: Setup.hs
  build-depends: Cabal,
                 directory,
                 filepath,
                 process
