cabal-version: 2.2

name: hui-build
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
author: Kazuki Okamoto
maintainer: kazuki.okamoto@kakkun61.com
-- copyright:
category: Development
build-type: Simple
-- extra-source-files:

common common
  build-depends: base >=4 && <5
  default-language: Haskell2010
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -Wno-name-shadowing

library
  import: common
  hs-source-dirs: src
  exposed-modules: Hui.Build
  build-depends: cabal-plan,
                 containers,
                 directory,
                 either-result,
                 filepath,
                 text

executable hui
  import: common
  hs-source-dirs: app
  main-is: hui.hs
  build-depends: hui-build
