cabal-version: 2.2

name: hui
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
author: Kazuki Okamoto
maintainer: kazuki.okamoto@kakkun61.com
-- copyright:
-- category:
build-type: Simple
extra-source-files: Hui.def

common common
  build-depends: base >=4 && <5
  default-language: Haskell2010
  ghc-options: -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Wmissing-import-lists
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -Wno-name-shadowing
  default-extensions: Strict

library
  import: common
  exposed-modules: Hui
                   Hui.Code
  hs-source-dirs: src
  c-sources: src/rts.c
  build-depends: bytestring,
                 containers,
                 either-result,
                 protocol-buffers,
                 text
  build-tool-depends: hprotoc:hprotoc
